# chinese2digits

./: .gitattributes  .gitignore  README.MD  main.go
Go/: main.go
Go/chinese2digits/: chinese2digits.go
Python/: README.rst  chinese2digits.py  setup.py
Python/chinese2digits/: __init__.py  chinese2digits.py  test.py
chinese2digits/: c2d_test.go  chinese2digits.go  main.go
chinese2digits-rust/: Cargo.toml
chinese2digits-rust/chinese2digits/: Cargo.toml  README.MD
chinese2digits-rust/chinese2digits-example/: Cargo.toml
chinese2digits-rust/chinese2digits-example/src/: main.rs
chinese2digits-rust/chinese2digits/src/: lib.rs
chinese2digits-rust/chinese2digits/tests/: chinese2digits_test.rs
chinese2digits-rust/src/: main.rs
